--- a/paper/action_2016.html
+++ b/paper/action_2016.html
@@ -1,6 +1,10 @@
+<pre>
+  <code>
 @article{wu2016action,
   title={Action recognition with joint attention on multi-level deep features},
   author={Wu, Jialin and Wang, Gu and Yang, Wukui and Ji, Xiangyang},
   journal={arXiv preprint arXiv:1607.02556},
   year={2016}
 }
+  </code>
+</pre>
