--- a/paper/cpspp_arxiv_2020.html
+++ b/paper/cpspp_arxiv_2020.html
@@ -1,6 +1,10 @@
+<pre>
+  <code>
 @article{manhardt2020cps,
   title={CPS++: Improving Class-level 6D Pose and Shape EstimationFrom Monocular Images With Self-Supervised Learning},
   author={Manhardt, Fabian and Wang, Gu and Busam, Benjamin and Nickel, Manuel and Meier, Sven and Minciullo, Luca and Ji, Xiangyang and Navab, Nassir},
   journal={arXiv preprint arXiv:2003.05848v3},
   year={2020}
 }
+  </code>
+</pre>
