--- a/paper/deepim_ijcv2019.html
+++ b/paper/deepim_ijcv2019.html
@@ -1,3 +1,5 @@
+<pre>
+  <code>
 @article{li20deepim_ijcv,
   author    = {Yi Li and Gu Wang and Xiangyang Ji and Yu Xiang and Dieter Fox},
   title     = {{DeepIM}: Deep Iterative Matching for 6D Pose Estimation},
@@ -7,3 +9,5 @@
   pages     = {657--678},
   year      = {2020},
 }
+  </code>
+</pre>
