--- a/paper/gdrn_cvpr2021.html
+++ b/paper/gdrn_cvpr2021.html
@@ -1,3 +1,5 @@
+<pre>
+    <code>
 @InProceedings{Wang_2021_GDRN,
     title     = {{GDR-Net}: Geometry-Guided Direct Regression Network for Monocular 6D Object Pose Estimation},
     author    = {Wang, Gu and Manhardt, Fabian and Tombari, Federico and Ji, Xiangyang},
@@ -6,3 +8,5 @@
     year      = {2021},
     pages     = {16611-16621}
 }
+    </code>
+</pre>
