--- a/paper/self6d_eccv2020.html
+++ b/paper/self6d_eccv2020.html
@@ -1,7 +1,11 @@
+<pre>
+    <code>
 @InProceedings{wang2020self6d,
     title={{Self6D}: Self-Supervised Monocular 6D Object Pose Estimation},
     author={Wang, Gu and Manhardt, Fabian and Shao, Jianzhun and Ji, Xiangyang and Navab, Nassir and Tombari, Federico},
     booktitle={European Conference on Computer Vision (ECCV)},
     year={2020},
-    pages     = {108--125}
+    pages={108--125}
 }
+    </code>
+</pre>
