--- a/paper/so_pose_iccv2021.html
+++ b/paper/so_pose_iccv2021.html
@@ -1,3 +1,5 @@
+<pre>
+    <code>
 @InProceedings{Di_2021_SO_Pose,
     title     = {{SO-Pose}: Exploiting Self-Occlusion for Direct 6D Pose Estimation},
     author    = {Di, Yan and Manhardt, Fabian and Wang, Gu and  and Ji, Xiangyang and Navab, Nassir and Tombari, Federico},
@@ -5,3 +7,5 @@
     year      = {2021},
     pages = {12396-12405}
 }
+    </code>
+</pre>
