--- a/paper/cdpn_iccv2019.html
+++ b/paper/cdpn_iccv2019.html
@@ -1,3 +1,5 @@
+<pre>
+  <code>
 @inproceedings{li2019cdpn,
   title={{CDPN}: {C}oordinates-{B}ased {D}isentangled {P}ose {N}etwork for {R}eal-{T}ime {RGB}-{B}ased 6-{DoF} {O}bject {P}ose {E}stimation},
   author={Li, Zhigang and Wang, Gu and Ji, Xiangyang},
@@ -5,3 +7,5 @@
   pages={7678--7687},
   year={2019}
 }
+  </code>
+</pre>
