--- a/paper/self6dpp_tpami.html
+++ b/paper/self6dpp_tpami.html
@@ -1,3 +1,5 @@
+<pre>
+  <code>
 @article{Wang_2021_self6dpp,
   title     = {Occlusion-Aware Self-Supervised Monocular {6D} Object Pose Estimation},
   author    = {Wang, Gu and Manhardt, Fabian and Liu, Xingyu and Ji, Xiangyang and Tombari, Federico},
@@ -5,3 +7,5 @@
   year      = {2021},
   doi       = {10.1109/TPAMI.2021.3136301}
 }
+  </code>
+</pre>
