update bib link

--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@ which.style.display="block"
 			[<a href="https://doi.org/10.1109/TPAMI.2021.3136301">Paper</a>]
 			[<a href="https://arxiv.org/abs/2203.10339">arXiv</a>]
 			[<a href="https://github.com/THU-DA-6D-Pose-Group/self6dpp">Code</a>]
-			[<a href="./paper/self6dpp_tpami.bib">bibtex</a>]
+			[<a href="./paper/self6dpp_tpami.html">bibtex</a>]
 		</td>
 	</tr>
 
@@ -294,7 +294,7 @@ which.style.display="block"
 			<i>In IEEE International Conference on Computer Vision (ICCV), 2021</i>.<br>
 			[<a href="https://arxiv.org/abs/2108.08367">Paper</a>]
 			[<a href="https://github.com/shangbuhuan13/SO-Pose">Code</a>]
-			[<a href="./paper/so_pose_iccv2021.bib">bibtex</a>]
+			[<a href="./paper/so_pose_iccv2021.html">bibtex</a>]
 		</td>
 	</tr>
 
@@ -311,7 +311,7 @@ which.style.display="block"
 			<i>In IEEE Conference on Computer Vision and Pattern Recognition (CVPR), 2021</i>.<br>
 			[<a href="https://arxiv.org/pdf/2102.12145.pdf">Paper</a>]
 			[<a href="https://git.io/GDR-Net">Code</a>]
-			[<a href="./paper/gdrn_cvpr2021.bib">bibtex</a>]
+			[<a href="./paper/gdrn_cvpr2021.html">bibtex</a>]
 		</td>
 	</tr>
 
@@ -328,7 +328,7 @@ which.style.display="block"
 			<a href="https://www.cs.cit.tum.de/camp/members/cv-nassir-navab/nassir-navab/"> Nassir Navab</a><br>
 		  <i>arXiv:2003.05848</i>.<br>
 		  [<a href="https://arxiv.org/abs/2003.05848">Paper</a>]
-		  [<a href="./paper/cpspp_arxiv_2020.bib">bibtex</a>]
+		  [<a href="./paper/cpspp_arxiv_2020.html">bibtex</a>]
 	</td></tr>
 
   	<tr>
@@ -345,7 +345,7 @@ which.style.display="block"
 			[<a href="https://arxiv.org/pdf/2004.06468.pdf">Paper</a>]
 			[<a href="https://github.com/THU-DA-6D-Pose-Group/Self6D-Diff-Renderer">Diff-Renderer Code</a>]
 			[<a href="https://www.bilibili.com/video/BV1iV411U77h/">Video</a>]
-			[<a href="./paper/self6d_eccv2020.bib">bibtex</a>]
+			[<a href="./paper/self6d_eccv2020.html">bibtex</a>]
 	</td></tr>
 
     <tr>
@@ -359,7 +359,7 @@ which.style.display="block"
 			<i>In IEEE Conference on Computer Vision and Pattern Recognition (CVPR), 2020</i>.<br>
 			[<a href="http://openaccess.thecvf.com/content_CVPR_2020/papers/Shao_PFRL_Pose-Free_Reinforcement_Learning_for_6D_Pose_Estimation_CVPR_2020_paper.pdf">Paper</a>]
 			[<a href="https://www.youtube.com/watch?v=URq86Jz5nVU">Video</a>]
-			[<a href="./paper/pfrl_cvpr2020.bib">bibtex</a>]
+			[<a href="./paper/pfrl_cvpr2020.html">bibtex</a>]
 	</td></tr>
 
 
@@ -373,7 +373,7 @@ which.style.display="block"
 			[<a href="http://openaccess.thecvf.com/content_ICCV_2019/html/Li_CDPN_Coordinates-Based_Disentangled_Pose_Network_for_Real-Time_RGB-Based_6-DoF_Object_ICCV_2019_paper.html">Paper</a>]
 			[<a href="https://github.com/LZGMatrix/BOP19_CDPN_2019ICCV">Code for BOP19/20</a>]
 			[<a href="https://www.youtube.com/watch?v=zem03fZWLrQ">Oral Video</a>]
-			[<a href="./paper/cdpn_iccv2019.bib">bibtex</a>]
+			[<a href="./paper/cdpn_iccv2019.html">bibtex</a>]
 	</td></tr>
 
 	<tr>
@@ -390,7 +390,7 @@ which.style.display="block"
 		[<a href="https://github.com/liyi14/mx-DeepIM">Code</a>]
 		[<a href="https://www.youtube.com/watch?v=zKe3D8w0NJE&feature=youtu.be">Slides</a>]
 		[<a href="https://rse-lab.cs.washington.edu/projects/deepim/">Project Page</a>]
-		[<a href="./paper/deepim_ijcv2019.bib">bibtex</a>]
+		[<a href="./paper/deepim_ijcv2019.html">bibtex</a>]
 
 	</table>
 
