catre paper link

--- a/index.html
+++ b/index.html
@@ -255,7 +255,8 @@ which.style.display="block"
 			<a href="http://yili.vision/"> Yi Li</a>,
 			<a href="https://www.au.tsinghua.edu.cn/info/1166/2066.htm"> Xiangyang Ji</a><br>
 			<i>In European Conference on Computer Vision (ECCV), 2022</i>.<br>
-			[<a href="todo">Paper</a>][<a href="https://arxiv.org/abs/2207.08082">arXiv</a>]
+			[<a href="https://link.springer.com/chapter/10.1007/978-3-031-20086-1_29">Paper</a>]
+			[<a href="https://arxiv.org/abs/2207.08082">arXiv</a>]
 			[<a href="https://github.com/THU-DA-6D-Pose-Group/CATRE">Code</a>]
 			[<a href="https://www.bilibili.com/video/BV1e8411e7Jt?share_source=copy_web">Video</a>]
 			[<a href="./paper/catre_eccv2022.html">bibtex</a>]
