--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@ which.style.display="block"
 		<h2>Service</h2>
 		<ul>
 		<li> Co-organizer of the <a href="http://cmp.felk.cvut.cz/sixd/workshop_2022/">7th International Workshop on Recovering 6D Object Pose</a> and <a href="https://bop.felk.cvut.cz/challenges/bop-challenge-2022/">BOP Challenge 2022</a> @ ECCV 22 </i></li><br/>
-		<li> Reviewer (Conference): CVPR 21/22, ICCV 19/21, ECCV 20/22, ICRA 22, ACM MM 22, IJCAI 22, IROS 20</i></li><br/>
+		<li> Reviewer (Conference): CVPR 21/22/23, ICCV 19/21, ECCV 20/22, ICRA 22, ACM MM 22, IJCAI 22/23, IROS 20</i></li><br/>
 		<li> Reviewer (Journal): TIP22, RAL 21/22, TCDS 22, RAS 21, TIM 21, PR 22, Neurocomputing 22, JAS 21, ESWA 21/22, JVCIR 20/21/22</i></li><br/>
 		</ul>
 	</div>
