update Ji's link

--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@ which.style.display="block"
 	<h2>About Me</h2>
 	I received my B.E. degree in 2016 and Ph.D. degree in 2022 from <a href="http://www.au.tsinghua.edu.cn/publish/auen/index.html">Department of Automation</a>,
 	<a href="http://www.sist.tsinghua.edu.cn/docinfo_eng/index.jsp">School of Information Science and Technology</a>,
-	<a href="http://www.tsinghua.edu.cn/publish/newthuen/index.html">Tsinghua University</a>, under the supervision of Prof. <a href="http://xiangyangji.com/index.php">Xiangyang Ji</a>.
+	<a href="http://www.tsinghua.edu.cn/publish/newthuen/index.html">Tsinghua University</a>, under the supervision of Prof. <a href="https://www.au.tsinghua.edu.cn/info/1166/2066.htm">Xiangyang Ji</a>.
 	My research interests lie in Computer Vision and Deep Learning.
 	During my Ph.D., I focused on 6D object pose estimation with RGB based methods.
 	I am also interested in other vision and robotics related perception problems in both 2D and 3D worlds.
