--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@ which.style.display="block"
 
 <div class='section_div'>
 <h2>News</h2>
-<li>[10/2022] Our work GDRNPP won most of the awards on <a href="https://bop.felk.cvut.cz/challenges/bop-challenge-2022/">BOP Challenge 2022</a> @ ECCV 22 (<a href="http://cmp.felk.cvut.cz/sixd/workshop_2022/slides/bop_challenge_2022_results.pdf">Slides</a>, <a href="https://github.com/shanice-l/gdrnpp_bop2022">Code</a>).</li>	
+<li>[10/2022] Our work GDRNPP won most of the awards on <a href="https://bop.felk.cvut.cz/challenges/bop-challenge-2022/">BOP Challenge 2022</a> @ ECCV 22 (<a href="http://cmp.felk.cvut.cz/sixd/workshop_2022/slides/bop_challenge_2022_results.pdf">Slides</a>, <a href="https://github.com/shanice-l/gdrnpp_bop2022">Code</a>).</li>
 <li>[04/2022] I am co-organizing the <a href="http://cmp.felk.cvut.cz/sixd/workshop_2022/">7th International Workshop on Recovering 6D Object Pose</a> and <a href="https://bop.felk.cvut.cz/challenges/bop-challenge-2022/">BOP Challenge 2022</a> @ ECCV 22.</li>
 <li>[02/2022] I joined JD.com as a member of DMT (Doctoral Management Trainee).</li>
 <li>[12/2021] PhD defended.</li>
@@ -420,8 +420,8 @@ which.style.display="block"
 		<ul>
 		<li> Co-organizer of the <a href="http://cmp.felk.cvut.cz/sixd/workshop_2023/">8th International Workshop on Recovering 6D Object Pose</a> and <a href="https://bop.felk.cvut.cz/challenges/bop-challenge-2023/">BOP Challenge 2023</a> @ ICCV 23 </i></li><br/>
 		<li> Co-organizer of the <a href="http://cmp.felk.cvut.cz/sixd/workshop_2022/">7th International Workshop on Recovering 6D Object Pose</a> and <a href="https://bop.felk.cvut.cz/challenges/bop-challenge-2022/">BOP Challenge 2022</a> @ ECCV 22 </i></li><br/>
-		<li> Reviewer (Conference): CVPR 21/22/23, ICCV 19/21/23, NeurIPS 23, ECCV 20/22, ICRA 22, ACM MM 22, IJCAI 22/23, IROS 20</i></li><br/>
-		<li> Reviewer (Journal): TIP22, RAL 21/22/23, TCDS 22, RAS 21, TIM 21, PR 22, CVIU 23, Neurocomputing 22, JAS 21</i></li><br/>
+		<li> Reviewer (Conference): CVPR 21/22/23, ICCV 19/21/23, ICLR 24, NeurIPS 23, ECCV 20/22, ICRA 22, ACM MM 22, IJCAI 22/23, IROS 20</i></li><br/>
+		<li> Reviewer (Journal): TIP 22, RAL 21/22/23, TCDS 22, RAS 21, TIM 21, PR 22, CVIU 23, Neurocomputing 22, JAS 21</i></li><br/>
 		</ul>
 	</div>
 
