--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@ which.style.display="block"
 			<a href="https://campar.in.tum.de/Main/FabianManhardt"> Fabian Manhardt*</a>,
 			<a href="https://lliu-xingyu.github.io/"> Xingyu Liu</a>,
 			<a href="https://www.au.tsinghua.edu.cn/info/1166/2066.htm"> Xiangyang Ji</a>,
-			<a href="https://www.cs.cit.tum.de/camp/members/senior-research-scientists/federico-tombari/"> Federico Tombari</a><br>
+			<a href="https://federicotombari.github.io/"> Federico Tombari</a><br>
 			<i>In IEEE Transactions on Pattern Analysis and Machine Intelligence (TPAMI), 2021</i>.<br>
 			[<a href="https://doi.org/10.1109/TPAMI.2021.3136301">Paper</a>]
 			[<a href="https://arxiv.org/abs/2203.10339">arXiv</a>]
@@ -288,12 +288,12 @@ which.style.display="block"
 						src='images/paper/2021iccv_so_pose_3.png' /></a></div>
 		</td>
 		<td class="pub_td2"><b>SO-Pose: Exploiting Self-Occlusion for Direct 6D Pose Estimation</b><br>
-			<a href="https://scholar.google.com/citations?user=HSlGGvwAAAAJ">Yan Di</a>,
+			<a href="https://shangbuhuan13.github.io/">Yan Di</a>,
 			<a href="https://campar.in.tum.de/Main/FabianManhardt"> Fabian Manhardt</a>,
 			<b> Gu Wang</b>,
 			<a href="https://www.au.tsinghua.edu.cn/info/1166/2066.htm"> Xiangyang Ji</a>,
 			<a href="https://www.cs.cit.tum.de/camp/members/cv-nassir-navab/nassir-navab/"> Nassir Navab</a>,
-			<a href="https://www.cs.cit.tum.de/camp/members/senior-research-scientists/federico-tombari/"> Federico Tombari</a><br>
+			<a href="https://federicotombari.github.io/"> Federico Tombari</a><br>
 			<i>In IEEE International Conference on Computer Vision (ICCV), 2021</i>.<br>
 			[<a href="https://arxiv.org/abs/2108.08367">Paper</a>]
 			[<a href="https://github.com/shangbuhuan13/SO-Pose">Code</a>]
@@ -309,7 +309,7 @@ which.style.display="block"
 		<td class="pub_td2"><b>GDR-Net: Geometry-Guided Direct Regression Network for Monocular 6D Object Pose Estimation</b><br>
 			<b>Gu Wang</b>,
 			<a href="https://campar.in.tum.de/Main/FabianManhardt"> Fabian Manhardt</a>,
-			<a href="https://www.cs.cit.tum.de/camp/members/senior-research-scientists/federico-tombari/"> Federico Tombari</a>,
+			<a href="https://federicotombari.github.io/"> Federico Tombari</a>,
 			<a href="https://www.au.tsinghua.edu.cn/info/1166/2066.htm"> Xiangyang Ji</a><br>
 			<i>In IEEE Conference on Computer Vision and Pattern Recognition (CVPR), 2021</i>.<br>
 			[<a href="https://arxiv.org/pdf/2102.12145.pdf">Paper</a>]
@@ -343,7 +343,7 @@ which.style.display="block"
 			<a href="https://www.aminer.cn/profile/jianzhun-shao/61775b3860a9653f448f03e7"> Jianzhun Shao</a>,
 			<a href="https://www.au.tsinghua.edu.cn/info/1166/2066.htm"> Xiangyang Ji</a>,
 			<a href="https://www.cs.cit.tum.de/camp/members/cv-nassir-navab/nassir-navab/"> Nassir Navab</a>,
-			<a href="https://www.cs.cit.tum.de/camp/members/senior-research-scientists/federico-tombari/"> Federico Tombari</a><br>
+			<a href="https://federicotombari.github.io/"> Federico Tombari</a><br>
 			<i>In European Conference on Computer Vision (ECCV), 2020 (<b>oral</b>)</i>.<br>
 			[<a href="https://arxiv.org/pdf/2004.06468.pdf">Paper</a>]
 			[<a href="https://github.com/THU-DA-6D-Pose-Group/Self6D-Diff-Renderer">Diff-Renderer Code</a>]
