--- a/index.html
+++ b/index.html
@@ -401,19 +401,16 @@ which.style.display="block"
 	</div>
 
 
-	<div class='section_div'>
+	<!-- <div class='section_div'>
 		<h2>Experience</h2>
 		<ul>
 		<li> Broadband Network and Digital Media Lab, Tsinghua University, Beijing. (Aug. 2016 - Jan. 2022)<br/>
 			<i>Ph.D. student, with advisor Prof. Xiangyang Ji</i></li><br/>
 		<li> Computer Vision Group, CAMP Chair, Technical University of Munich. (Oct. 2019 - Sept. 2020)<br/>
 			<i>Visiting Ph.D. student, with co-advisor Dr. Federico Tombari</i></li><br/>
-		<li> Hangzhou Zhibei Tech. (Jul. 2018 - Aug. 2018)<br/>
-			<i>Research intern, with Dr. Yaohe Cao</i></li><br/>
-		<li> Department of Image Search, Baidu, Beijing. (Jul. 2015 - Oct. 2015)<br/>
-			<i>Research intern, with Dr. Gaolin Fang</i></li><br/>
+
 		</ul>
-	</div>
+	</div> -->
 
 	<div class='section_div'>
 		<h2>Service</h2>
