--- a/index.html
+++ b/index.html
@@ -417,7 +417,7 @@ which.style.display="block"
 		<ul>
 		<li> Co-organizer of the <a href="http://cmp.felk.cvut.cz/sixd/workshop_2023/">8th International Workshop on Recovering 6D Object Pose</a> and <a href="https://bop.felk.cvut.cz/challenges/bop-challenge-2023/">BOP Challenge 2023</a> @ ICCV 23 </i></li><br/>
 		<li> Co-organizer of the <a href="http://cmp.felk.cvut.cz/sixd/workshop_2022/">7th International Workshop on Recovering 6D Object Pose</a> and <a href="https://bop.felk.cvut.cz/challenges/bop-challenge-2022/">BOP Challenge 2022</a> @ ECCV 22 </i></li><br/>
-		<li> Reviewer (Conference): CVPR 21/22/23, ICCV 19/21/23, ICLR 24, NeurIPS 23, ECCV 20/22, ICRA 22, ACM MM 22, IJCAI 22/23, IROS 20</i></li><br/>
+		<li> Reviewer (Conference): CVPR 21/22/23/24, ICCV 19/21/23, ICML 24, ICLR 24, NeurIPS 23, ECCV 20/22, ICRA 22, ACM MM 22, IJCAI 22/23/24, IROS 20</i></li><br/>
 		<li> Reviewer (Journal): T-RO 23, TIP 22, TIM 21, PR 22, JAS 21, RA-L 21/22/23, TCDS 22, Neurocomputing 22, CVIU 23, RAS 21</i></li><br/>
 		</ul>
 	</div>
