modified:   index.html

--- a/index.html
+++ b/index.html
@@ -417,7 +417,7 @@ which.style.display="block"
 		<ul>
 		<li> Co-organizer of the <a href="http://cmp.felk.cvut.cz/sixd/workshop_2023/">8th International Workshop on Recovering 6D Object Pose</a> and <a href="https://bop.felk.cvut.cz/challenges/bop-challenge-2023/">BOP Challenge 2023</a> @ ICCV 23 </i></li><br/>
 		<li> Co-organizer of the <a href="http://cmp.felk.cvut.cz/sixd/workshop_2022/">7th International Workshop on Recovering 6D Object Pose</a> and <a href="https://bop.felk.cvut.cz/challenges/bop-challenge-2022/">BOP Challenge 2022</a> @ ECCV 22 </i></li><br/>
-		<li> Reviewer (Conference): CVPR, ICCV, ECCV, ICML, ICLR, NeurIPS, ICRA, AAAI, IJCAI, ACM MM, IROS, WACV, ACCV</i></li><br/>
+		<li> Reviewer (Conference): CVPR, ICCV, ECCV, ICML, ICLR, NeurIPS, ICRA, AAAI, IJCAI, ACM MM, IROS, WACV, ACCV, AISTATS</i></li><br/>
 		<li> Reviewer (Journal): TPAMI, T-RO, TIP, TNNLS, PR, TIM, RA-L, JAS, TCDS, Neurocomputing, CVIU, RAS, etc.</i></li><br/>
 		</ul>
 	</div>
