--- a/paper/self6dpp_tpami.html
+++ b/paper/self6dpp_tpami.html
@@ -4,7 +4,10 @@
   title     = {Occlusion-Aware Self-Supervised Monocular {6D} Object Pose Estimation},
   author    = {Wang, Gu and Manhardt, Fabian and Liu, Xingyu and Ji, Xiangyang and Tombari, Federico},
   journal   = {IEEE Transactions on Pattern Analysis and Machine Intelligence (TPAMI)},
-  year      = {2021},
+  year      = {2024},
+  volume = {46},
+  number = {3},
+  pages = {1788-1803},
   doi       = {10.1109/TPAMI.2021.3136301}
 }
   </code>
