--- a/index.html
+++ b/index.html
@@ -244,6 +244,46 @@ which.style.display="block"
 	(* indicates equal contribution)<br>
 
   <!-- <tr><td class="sub_heading">Recent Selected Papers<hr></td></tr> -->
+  <tr>
+	<td class="pub_td1">
+		<div class="teaser_img_div"><a href="https://link.springer.com/chapter/10.1007/978-3-031-73021-4_21"><img class="teaser_img"
+					src='images/paper/24eccv_FAFA_teaser.jpg' /></a></div>
+	</td>
+	<td class="pub_td2"><b>FAFA: Frequency-Aware Flow-Aided Self-Supervision for Underwater Object Pose Estimation</b><br>
+		<a href="https://scholar.google.com/citations?user=gJGdfrYAAAAJ&hl=en"> Jingyi Tang*</a>,
+		<b>Gu Wang</b>*,
+		<a href="https://zeyuuuchen.github.io/"> Zeyu Chen</a>,
+		Shengquan Li,
+		<a href="https://www.sigs.tsinghua.edu.cn/lx/list.htm"> Xiu Li</a>,
+		<a href="https://www.au.tsinghua.edu.cn/info/1111/1524.htm"> Xiangyang Ji</a><br>
+		<i>In European Conference on Computer Vision (ECCV), 2024</i>.<br>
+		[<a href="https://link.springer.com/chapter/10.1007/978-3-031-73021-4_21">Paper</a>]
+		[<a href="https://arxiv.org/abs/2409.16600">arXiv</a>]
+		[<a href="https://github.com/tjy0703/FAFA">Code</a>]
+		[<a href="./paper/fafa_eccv2024.html">bibtex</a>]
+	</td>
+    </tr>
+
+
+    <tr>
+	<td class="pub_td1">
+		<div class="teaser_img_div"><a href="https://doi.org/10.1109/TPAMI.2021.3136301"><img class="teaser_img"
+					src='images/paper/self6dpp_tpami.png' /></a></div>
+	</td>
+	<td class="pub_td2"><b>Occlusion-Aware Self-Supervised Monocular 6D Object Pose Estimation</b><br>
+		<b>Gu Wang</b>*,
+		<a href="https://campar.in.tum.de/Main/FabianManhardt"> Fabian Manhardt*</a>,
+		<a href="https://lliu-xingyu.github.io/"> Xingyu Liu</a>,
+		<a href="https://www.au.tsinghua.edu.cn/info/1111/1524.htm"> Xiangyang Ji</a>,
+		<a href="https://federicotombari.github.io/"> Federico Tombari</a><br>
+		<i>In IEEE Transactions on Pattern Analysis and Machine Intelligence (TPAMI), 2024</i>.<br>
+		[<a href="https://doi.org/10.1109/TPAMI.2021.3136301">Paper</a>]
+		[<a href="https://arxiv.org/abs/2203.10339">arXiv</a>]
+		[<a href="https://github.com/THU-DA-6D-Pose-Group/self6dpp">Code</a>]
+		[<a href="./paper/self6dpp_tpami.html">bibtex</a>]
+	</td>
+    </tr>
+
 	<tr>
 		<td class="pub_td1">
 			<div class="teaser_img_div"><a href="https://arxiv.org/abs/2207.08082"><img class="teaser_img"
@@ -263,24 +303,7 @@ which.style.display="block"
 		</td>
 	</tr>
 
-	<tr>
-		<td class="pub_td1">
-			<div class="teaser_img_div"><a href="https://doi.org/10.1109/TPAMI.2021.3136301"><img class="teaser_img"
-						src='images/paper/self6dpp_tpami.png' /></a></div>
-		</td>
-		<td class="pub_td2"><b>Occlusion-Aware Self-Supervised Monocular 6D Object Pose Estimation</b><br>
-			<b>Gu Wang</b>*,
-			<a href="https://campar.in.tum.de/Main/FabianManhardt"> Fabian Manhardt*</a>,
-			<a href="https://lliu-xingyu.github.io/"> Xingyu Liu</a>,
-			<a href="https://www.au.tsinghua.edu.cn/info/1111/1524.htm"> Xiangyang Ji</a>,
-			<a href="https://federicotombari.github.io/"> Federico Tombari</a><br>
-			<i>In IEEE Transactions on Pattern Analysis and Machine Intelligence (TPAMI), 2024</i>.<br>
-			[<a href="https://doi.org/10.1109/TPAMI.2021.3136301">Paper</a>]
-			[<a href="https://arxiv.org/abs/2203.10339">arXiv</a>]
-			[<a href="https://github.com/THU-DA-6D-Pose-Group/self6dpp">Code</a>]
-			[<a href="./paper/self6dpp_tpami.html">bibtex</a>]
-		</td>
-	</tr>
+
 
 	<tr>
 		<td class="pub_td1">
