--- a/index.html
+++ b/index.html
@@ -244,6 +244,26 @@ which.style.display="block"
 	(* indicates equal contribution)<br>
 
   <!-- <tr><td class="sub_heading">Recent Selected Papers<hr></td></tr> -->
+	<tr>
+		<td class="pub_td1">
+			<div class="teaser_img_div"><a href="https://arxiv.org/abs/2411.16106"><img class="teaser_img"
+						src='images/paper/unopose.jpg' /></a></div>
+		</td>
+		<td class="pub_td2"><b>UNOPose: Unseen Object Pose Estimation with an Unposed RGB-D Reference Image</b><br>
+			<a href="https://lliu-xingyu.github.io/">Xingyu Liu*</a>,
+			<b> Gu Wang*</b>,
+			<a href="https://lolrudy.github.io/"> Ruida Zhang</a>,
+			<a href="https://zhangcyg.github.io/"> Chenyangguang Zhang</a>,
+			<a href="https://federicotombari.github.io/"> Federico Tombari</a>,
+			<a href="https://www.au.tsinghua.edu.cn/info/1111/1524.htm"> Xiangyang Ji</a><br>
+			<i>In IEEE Conference on Computer Vision and Pattern Recognition (CVPR), 2025</i>.<br>
+			[<a href="todo">Paper</a>]
+			[<a href="https://arxiv.org/pdf/2411.16106">arXiv</a>]
+			[<a href="todo">Code</a>]
+			[<a href="./paper/unopose_cvpr2025.html">bibtex</a>]
+		</td>
+	</tr>
+
   <tr>
 	<td class="pub_td1">
 		<div class="teaser_img_div"><a href="https://link.springer.com/chapter/10.1007/978-3-031-73021-4_21"><img class="teaser_img"
@@ -276,7 +296,7 @@ which.style.display="block"
 		<a href="https://lliu-xingyu.github.io/"> Xingyu Liu</a>,
 		<a href="https://www.au.tsinghua.edu.cn/info/1111/1524.htm"> Xiangyang Ji</a>,
 		<a href="https://federicotombari.github.io/"> Federico Tombari</a><br>
-		<i>In IEEE Transactions on Pattern Analysis and Machine Intelligence (TPAMI), 2024</i>.<br>
+		<i>In IEEE Transactions on Pattern Analysis and Machine Intelligence (TPAMI), 2024</i>. <b>(ESI Highly Cited)</b><br>
 		[<a href="https://doi.org/10.1109/TPAMI.2021.3136301">Paper</a>]
 		[<a href="https://arxiv.org/abs/2203.10339">arXiv</a>]
 		[<a href="https://github.com/THU-DA-6D-Pose-Group/self6dpp">Code</a>]
@@ -304,8 +324,7 @@ which.style.display="block"
 	</tr>
 
 
-
-	<tr>
+	<!-- <tr>
 		<td class="pub_td1">
 			<div class="teaser_img_div"><a href="https://arxiv.org/abs/2108.08367"><img class="teaser_img"
 						src='images/paper/2021iccv_so_pose_3.png' /></a></div>
@@ -322,7 +341,7 @@ which.style.display="block"
 			[<a href="https://github.com/shangbuhuan13/SO-Pose">Code</a>]
 			[<a href="./paper/so_pose_iccv2021.html">bibtex</a>]
 		</td>
-	</tr>
+	</tr> -->
 
 	<tr>
 		<td class="pub_td1">
@@ -411,7 +430,7 @@ which.style.display="block"
 		<a href="https://yuxng.github.io/"> Yu Xiang</a>,
 		<a href="http://homes.cs.washington.edu/~fox/"> Dieter Fox</a><br>
 		<i>In European Conference on Computer Vision (ECCV), 2018 (<b>oral</b>)</i>.<br>
-		<i>In International Journal of Computer Vision (IJCV), 2020</i>.<br>
+		<i>In International Journal of Computer Vision (IJCV), 2020</i>. <b>(ESI Highly Cited)</b><br>
 		[<a href="./paper/Li2019_IJCV_DeepIM.pdf">Paper</a>]
 		[<a href="https://github.com/liyi14/mx-DeepIM">Code</a>]
 		[<a href="https://www.youtube.com/watch?v=zKe3D8w0NJE&feature=youtu.be">Slides</a>]
