--- a/index.html
+++ b/index.html
@@ -264,6 +264,25 @@ which.style.display="block"
 		</td>
 	</tr>
 
+	<tr>
+		<td class="pub_td1">
+			<div class="teaser_img_div"><a href="https://doi.org/10.1109/TPAMI.2021.3136301"><img class="teaser_img"
+						src='images/paper/self6dpp_tpami.png' /></a></div>
+		</td>
+		<td class="pub_td2"><b>Occlusion-Aware Self-Supervised Monocular 6D Object Pose Estimation</b><br>
+			<b>Gu Wang</b>*,
+			<a href="https://campar.in.tum.de/Main/FabianManhardt"> Fabian Manhardt*</a>,
+			<a href="https://lliu-xingyu.github.io/"> Xingyu Liu</a>,
+			<a href="https://www.au.tsinghua.edu.cn/info/1111/1524.htm"> Xiangyang Ji</a>,
+			<a href="https://federicotombari.github.io/"> Federico Tombari</a><br>
+			<i>In IEEE Transactions on Pattern Analysis and Machine Intelligence (TPAMI), 2024</i>. <b>(ESI Highly Cited)</b><br>
+			[<a href="https://doi.org/10.1109/TPAMI.2021.3136301">Paper</a>]
+			[<a href="https://arxiv.org/abs/2203.10339">arXiv</a>]
+			[<a href="https://github.com/THU-DA-6D-Pose-Group/self6dpp">Code</a>]
+			[<a href="./paper/self6dpp_tpami.html">bibtex</a>]
+		</td>
+		</tr>
+
   <tr>
 	<td class="pub_td1">
 		<div class="teaser_img_div"><a href="https://link.springer.com/chapter/10.1007/978-3-031-73021-4_21"><img class="teaser_img"
@@ -284,25 +303,29 @@ which.style.display="block"
 	</td>
     </tr>
 
+	<tr>
+		<td class="pub_td1">
+			<div class="teaser_img_div"><a href="https://link.springer.com/chapter/10.1007/978-3-031-73397-0_22"><img class="teaser_img"
+						src='images/paper/dsco_eccv24.png' /></a></div>
+		</td>
+		<td class="pub_td2"><b>D-SCo: Dual-Stream Conditional Diffusion for Monocular Hand-Held Object Reconstruction</b><br>
+			<a href="https://fubowen1229.github.io/"> Bowen Fu</a>,
+			<b>Gu Wang</b>,
+			<a href="https://zhangcyg.github.io/"> Chenyangguang Zhang</a>,
+			<a href="https://shangbuhuan13.github.io/">Yan Di</a>,
+			Ziqin Huang,
+			Zhiying Leng,
+			<a href="https://campar.in.tum.de/Main/FabianManhardt"> Fabian Manhardt</a>,
+			<a href="https://www.au.tsinghua.edu.cn/info/1111/1524.htm"> Xiangyang Ji</a>
+			<a href="https://federicotombari.github.io/"> Federico Tombari</a><br>
+			<i>In European Conference on Computer Vision (ECCV), 2024</i>.<br>
+			[<a href="https://link.springer.com/chapter/10.1007/978-3-031-73397-0_22">Paper</a>]
+			[<a href="https://arxiv.org/pdf/2311.14189">arXiv</a>]
+			<!-- [<a href="">Code</a>] -->
+			[<a href="./paper/dsco_eccv24.html">bibtex</a>]
+		</td>
+		</tr>
 
-    <tr>
-	<td class="pub_td1">
-		<div class="teaser_img_div"><a href="https://doi.org/10.1109/TPAMI.2021.3136301"><img class="teaser_img"
-					src='images/paper/self6dpp_tpami.png' /></a></div>
-	</td>
-	<td class="pub_td2"><b>Occlusion-Aware Self-Supervised Monocular 6D Object Pose Estimation</b><br>
-		<b>Gu Wang</b>*,
-		<a href="https://campar.in.tum.de/Main/FabianManhardt"> Fabian Manhardt*</a>,
-		<a href="https://lliu-xingyu.github.io/"> Xingyu Liu</a>,
-		<a href="https://www.au.tsinghua.edu.cn/info/1111/1524.htm"> Xiangyang Ji</a>,
-		<a href="https://federicotombari.github.io/"> Federico Tombari</a><br>
-		<i>In IEEE Transactions on Pattern Analysis and Machine Intelligence (TPAMI), 2024</i>. <b>(ESI Highly Cited)</b><br>
-		[<a href="https://doi.org/10.1109/TPAMI.2021.3136301">Paper</a>]
-		[<a href="https://arxiv.org/abs/2203.10339">arXiv</a>]
-		[<a href="https://github.com/THU-DA-6D-Pose-Group/self6dpp">Code</a>]
-		[<a href="./paper/self6dpp_tpami.html">bibtex</a>]
-	</td>
-    </tr>
 
 	<tr>
 		<td class="pub_td1">
@@ -360,7 +383,7 @@ which.style.display="block"
 		</td>
 	</tr>
 
-	<tr>
+	<!-- <tr>
 		<td class="pub_td1"><div class="teaser_img_div"><a href="https://arxiv.org/abs/2003.05848"><img class="teaser_img" src='images/paper/2020_cpspp.png'/></a></div></td>
 		<td class="pub_td2"><b>CPS++: Improving Class-level 6D Pose and Shape Estimation From Monocular Images With Self-Supervised Learning</b><br>
 			<a href="https://campar.in.tum.de/Main/FabianManhardt">Fabian Manhardt</a>,
@@ -374,7 +397,7 @@ which.style.display="block"
 		  <i>arXiv:2003.05848</i>.<br>
 		  [<a href="https://arxiv.org/abs/2003.05848">Paper</a>]
 		  [<a href="./paper/cpspp_arxiv_2020.html">bibtex</a>]
-	</td></tr>
+	</td></tr> -->
 
   	<tr>
 		<td class="pub_td1"><div class="teaser_img_div"><a href="https://arxiv.org/pdf/2004.06468.pdf"><img class="teaser_img" src='images/paper/2020eccv_self6d.png'/></a></div></td>
