--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@ which.style.display="block"
 			Ziqin Huang,
 			Zhiying Leng,
 			<a href="https://campar.in.tum.de/Main/FabianManhardt"> Fabian Manhardt</a>,
-			<a href="https://www.au.tsinghua.edu.cn/info/1111/1524.htm"> Xiangyang Ji</a>
+			<a href="https://www.au.tsinghua.edu.cn/info/1111/1524.htm"> Xiangyang Ji</a>,
 			<a href="https://federicotombari.github.io/"> Federico Tombari</a><br>
 			<i>In European Conference on Computer Vision (ECCV), 2024</i>.<br>
 			[<a href="https://link.springer.com/chapter/10.1007/978-3-031-73397-0_22">Paper</a>]
