--- a/index.html
+++ b/index.html
@@ -241,9 +241,30 @@ which.style.display="block"
 	<a href="https://scholar.google.com/citations?user=htu3c7wAAAAJ">Google Scholar</a> /
 	<a href="https://www.semanticscholar.org/author/29644358">Semantic Scholar</a> </a> /
 	<a href="https://www.researchgate.net/profile/Gu_Wang">Research Gate</a> </a>.<br>
-	(* indicates equal contribution)<br>
+	(*: co-first authors, +: co-corresponding authors)<br>
 
   <!-- <tr><td class="sub_heading">Recent Selected Papers<hr></td></tr> -->
+  <tr>
+	<td class="pub_td1">
+		<div class="teaser_img_div"><a href="https://doi.org/TODO"><img class="teaser_img"
+					src='images/paper/gdrnpp_tpami.png' /></a></div>
+	</td>
+	<td class="pub_td2"><b>GDRNPP: A Geometry-guided and Fully Learning-based Object Pose Estimator</b><br>
+		<a href="https://lliu-xingyu.github.io/"> Xingyu Liu*</a>,
+		<a href="https://lolrudy.github.io/"> Ruida Zhang*</a>,
+		<a href="https://zhangcyg.github.io/"> Chenyangguang Zhang</a>,
+		<b>Gu Wang</b>+,
+		Jiwen Tang,
+		Zhigang Li,
+		<a href="https://www.au.tsinghua.edu.cn/info/1111/1524.htm"> Xiangyang Ji+</a><br>
+		<i>In IEEE Transactions on Pattern Analysis and Machine Intelligence (TPAMI), 2025</i>. <br>
+		[<a href="TODO">Paper</a>]
+		[<a href="https://arxiv.org/abs/TODO">arXiv</a>]
+		[<a href="https://github.com/shanice-l/gdrnpp_bop2022">Code</a>]
+		[<a href="./paper/gdrnpp_tpami.html">bibtex</a>]
+	</td>
+	</tr>
+
 	<tr>
 		<td class="pub_td1">
 			<div class="teaser_img_div"><a href="https://arxiv.org/abs/2411.16106"><img class="teaser_img"
