--- a/paper/gdrnpp_tpami.html
+++ b/paper/gdrnpp_tpami.html
@@ -1,7 +1,7 @@
 <pre>
   <code>
 @article{Liu_2025_gdrnpp,
-  title     = {},
+  title     = {{GDRNPP}: A Geometry-guided and Fully Learning-based Object Pose Estimator},
   author    = {Liu, Xingyu and Zhang, Ruida and Zhang, Chenyangguang and Wang, Gu and Tang, Jiwen and Li, Zhigang and Ji, Xiangyang},
   journal   = {IEEE Transactions on Pattern Analysis and Machine Intelligence (TPAMI)},
   year      = {2025},
