--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@ which.style.display="block"
 		<a href="https://www.au.tsinghua.edu.cn/info/1111/1524.htm"> Xiangyang Ji+</a><br>
 		<i>In IEEE Transactions on Pattern Analysis and Machine Intelligence (TPAMI), 2025</i>. <br>
 		[<a href="TODO">Paper</a>]
-		[<a href="https://arxiv.org/abs/TODO">arXiv</a>]
+		[<a href="https://arxiv.org/abs/2102.12145v4">arXiv</a>]
 		[<a href="https://github.com/shanice-l/gdrnpp_bop2022">Code</a>]
 		[<a href="./paper/gdrnpp_tpami.html">bibtex</a>]
 	</td>
