--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@ which.style.display="block"
   <!-- <tr><td class="sub_heading">Recent Selected Papers<hr></td></tr> -->
   <tr>
 	<td class="pub_td1">
-		<div class="teaser_img_div"><a href="https://doi.org/TODO"><img class="teaser_img"
+		<div class="teaser_img_div"><a href="https://doi.org/10.1109/TPAMI.2025.3553485"><img class="teaser_img"
 					src='images/paper/gdrnpp_tpami.png' /></a></div>
 	</td>
 	<td class="pub_td2"><b>GDRNPP: A Geometry-guided and Fully Learning-based Object Pose Estimator</b><br>
@@ -258,8 +258,8 @@ which.style.display="block"
 		Zhigang Li,
 		<a href="https://www.au.tsinghua.edu.cn/info/1111/1524.htm"> Xiangyang Ji+</a><br>
 		<i>In IEEE Transactions on Pattern Analysis and Machine Intelligence (TPAMI), 2025</i>. <br>
-		[<a href="TODO">Paper</a>]
-		[<a href="https://arxiv.org/abs/2102.12145v4">arXiv</a>]
+		[<a href="https://doi.org/10.1109/TPAMI.2025.3553485">Paper</a>]
+		[<a href="https://arxiv.org/abs/2102.12145">arXiv</a>]
 		[<a href="https://github.com/shanice-l/gdrnpp_bop2022">Code</a>]
 		[<a href="./paper/gdrnpp_tpami.html">bibtex</a>]
 	</td>
