--- a/index.html
+++ b/index.html
@@ -244,6 +244,7 @@ which.style.display="block"
 	(*: co-first authors, +: co-corresponding authors)<br>
 
   <!-- <tr><td class="sub_heading">Recent Selected Papers<hr></td></tr> -->
+
   <tr>
 	<td class="pub_td1">
 		<div class="teaser_img_div"><a href="https://doi.org/10.1109/TPAMI.2025.3553485"><img class="teaser_img"
@@ -253,7 +254,7 @@ which.style.display="block"
 		<a href="https://lliu-xingyu.github.io/"> Xingyu Liu*</a>,
 		<a href="https://lolrudy.github.io/"> Ruida Zhang*</a>,
 		<a href="https://zhangcyg.github.io/"> Chenyangguang Zhang</a>,
-		<b>Gu Wang</b>+,
+		<b>Gu Wang</b>,
 		Jiwen Tang,
 		Zhigang Li,
 		<a href="https://www.au.tsinghua.edu.cn/info/1111/1524.htm"> Xiangyang Ji+</a><br>
@@ -283,6 +284,27 @@ which.style.display="block"
 			[<a href="todo">Code</a>]
 			[<a href="./paper/unopose_cvpr2025.html">bibtex</a>]
 		</td>
+	</tr>
+
+	<tr>
+		<td class="pub_td1">
+			<div class="teaser_img_div"><a href="https://arxiv.org/pdf/2412.01552"><img class="teaser_img"
+						src='images/paper/gfreedet.jpg' /></a></div>
+		</td>
+		<td class="pub_td2"><b>GFreeDet: Exploiting Gaussian Splatting and Foundation Models for Model-free Unseen Object Detection in the BOP Challenge 2024</b><br>
+			<a href="https://lliu-xingyu.github.io/"> Xingyu Liu*</a>,
+			<b>Gu Wang*,+</b>,
+			Chengxi Li*,
+			Yingyue Li*,
+			<a href="https://zhangcyg.github.io/"> Chenyangguang Zhang</a>,
+			Ziqin Huang,
+			<a href="https://www.au.tsinghua.edu.cn/info/1111/1524.htm"> Xiangyang Ji+</a><br>
+			<i>In CVPR CV4MR Workshop, 2025</i>. <br>
+			(<b>The best overall method and the best fast method awards in
+				the model-free 2D detection track at BOP Challenge 2024</b>)<br>
+			[<a href="https://arxiv.org/pdf/2412.01552">arXiv</a>]
+			[<a href="./paper/gfreedet_cvprw2025.html">bibtex</a>]
+	</td>
 	</tr>
 
 	<tr>
